--- a/MyBlazorApp/Pages/Counter.razor
+++ b/MyBlazorApp/Pages/Counter.razor
@@ -1,16 +1,17 @@
-﻿@page "/counter"
-
+﻿@page "/counter2"
+@page "/counter/{initalcount:int?}"
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
-
+<h3>@initalcount</h3>
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
-
+    [parameter]
+    public int initalcount { get; set; }
     private void IncrementCount()
     {
         currentCount++;
