--- a/MyBlazorApp/Pages/Counter.razor
+++ b/MyBlazorApp/Pages/Counter.razor
@@ -10,8 +10,8 @@
 
 @code {
     private int currentCount = 0;
-    [parameter]
-    public int initalcount { get; set; }
+    [Parameter]
+    public int initalcount { get; set; }=5;
     private void IncrementCount()
     {
         currentCount++;
