--- a/MyBlazorApp/Pages/Counter.razor
+++ b/MyBlazorApp/Pages/Counter.razor
@@ -1,17 +1,25 @@
 ﻿@page "/counter2"
-@page "/counter/{initalcount:int?}"
+@page "/counter/{targetcount:int?}"
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
-<h3>@initalcount</h3>
+<h3>@targetcount</h3>
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
+    protected override void OnInitialized()
+    {
+        if (targetcount != 0)
+        {
+            currentCount = targetcount;
+        }
+    }
     [Parameter]
-    public int initalcount { get; set; }=5;
+    public int targetcount { get; set; }=50;
+
     private void IncrementCount()
     {
         currentCount++;
