--- a/MyBlazorApp/Pages/Counter.razor
+++ b/MyBlazorApp/Pages/Counter.razor
@@ -3,7 +3,7 @@
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
-<h3>@targetcount</h3>
+<h3>target counter: @targetcount</h3>
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
