Your commit message

--- a/MyTaskManager/Pages/ParentTaskManager.razor
+++ b/MyTaskManager/Pages/ParentTaskManager.razor
@@ -1,5 +1,6 @@
 @page "/tasks"
 @using Microsoft.AspNetCore.Components
+@layout Layout.layout2
 <head>
     <link rel="stylesheet" href="Layout\EXTRA.css" />
 </head>
