--- a/MyTaskManager/Pages/ChildTaskDisplay.razor
+++ b/MyTaskManager/Pages/ChildTaskDisplay.razor
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Components
 @page "/tasks2"
+@layout Layout.layout2
 <head>
     <link rel="stylesheet" href="Pages/abc.css" />
 </head>
